--- a/Codelabs.html
+++ b/Codelabs.html
@@ -31,9 +31,8 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
 				<li><a href="Codelabs.html">Codelabs</a></li>
+				<li><a href="Services.html">Services</a></li>
 				<li><a href="projects.html">Projects</a></li>
-				<li><a href="Education.html">Education</a></li>
-				<li><a href="experiments.html">Experiments</a></li>
 			</ul>
 		</nav>
 
@@ -45,7 +44,7 @@
 					<img src="images/pic07.jpg" alt="" />
 				</span>
 				<header class="major">
-					<h1>Work</h1>
+					<h1>Codelabs & Tutorials</h1>
 				</header>
 			</div>
 		</section>
@@ -55,7 +54,11 @@
 			<!-- One -->
 			<section id="one">
 				<div class="inner">
-					<p>CodeLabsPro is the ultimate coding bootcamp and the ultimate resource for codelabs, tutorials and software engineering learning resources.</p>
+					<header class="major">
+						<h2>Learn by Doing</h2>
+					</header>
+					<p>Our interactive codelabs are designed to make learning to code accessible, engaging, and practical for everyone. Each tutorial guides you step-by-step through building real applications, with clear explanations and hands-on exercises that reinforce your learning.</p>
+					<p>Whether you're a complete beginner or looking to learn new technologies, our codelabs break down complex topics into manageable lessons that anyone can follow.</p>
 				</div>
 			</section>
 
@@ -67,7 +70,10 @@
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p>How to Build an iOS app</p>
+							<header class="major">
+								<h3>Build Your First iOS App</h3>
+							</header>
+							<p>A beginner-friendly introduction to iOS app development. Learn Swift and SwiftUI while building a complete, functional application from scratch.</p>
 						</div>
 					</div>
 				</section>
@@ -77,7 +83,10 @@
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p>How to Build an iOS app</p>
+							<header class="major">
+								<h3>Web Development Fundamentals</h3>
+							</header>
+							<p>Master the basics of web development with HTML, CSS, and JavaScript. Build responsive websites that work on any device.</p>
 						</div>
 					</div>
 				</section>
@@ -87,7 +96,10 @@
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p>How to Build an iOS app</p>
+							<header class="major">
+								<h3>Introduction to Python Programming</h3>
+							</header>
+							<p>Start your coding journey with Python, one of the most accessible and versatile programming languages. Perfect for complete beginners.</p>
 						</div>
 					</div>
 				</section>
@@ -97,7 +109,10 @@
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p>How to Build an iOS app</p>
+							<header class="major">
+								<h3>React for Beginners</h3>
+							</header>
+							<p>Learn modern frontend development with React. Build interactive user interfaces with clear, beginner-friendly explanations.</p>
 						</div>
 					</div>
 				</section>
@@ -107,7 +122,10 @@
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p>How to Build an iOS app</p>
+							<header class="major">
+								<h3>Backend Development with Node.js</h3>
+							</header>
+							<p>Build server-side applications and APIs using JavaScript. Learn to create full-stack applications from the ground up.</p>
 						</div>
 					</div>
 				</section>
@@ -117,7 +135,10 @@
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p>How to Build an iOS app</p>
+							<header class="major">
+								<h3>Machine Learning Basics</h3>
+							</header>
+							<p>Demystifying AI and machine learning for beginners. Learn fundamental concepts through practical, hands-on projects.</p>
 						</div>
 					</div>
 				</section>
@@ -127,23 +148,26 @@
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p>How to Build an iOS app</p>
+							<header class="major">
+								<h3>Mobile App Development with Flutter</h3>
+							</header>
+							<p>Create beautiful mobile apps for iOS and Android with a single codebase. Accessible tutorials for aspiring mobile developers.</p>
 						</div>
 					</div>
 				</section>
 			</section>
 
 		</div>
-		
+
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
 					<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span
 								class="label">GitHub</span></a></li>
-					<li><a target="_blank" href="https://codelabspro.com" class="icon alt fa-linkedin"><span
+					<li><a target="_blank" href="https://codelabspro.medium.com" class="icon alt fa-medium"><span
 								class="label">Medium</span></a></li>
-					<li><a target="_blank" href="https://twitter.com/arun_genomics" class="icon alt fa-twitter"><span
+					<li><a target="_blank" href="https://twitter.com/codelabspro" class="icon alt fa-twitter"><span
 								class="label">Twitter</span></a></li>
 
 				</ul>
