--- a/Products.html
+++ b/Products.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>CodeLabsPro Coding Bootcamp</title>
+	<title>CodeLabsPro Products</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,10 +29,9 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
-				<li><a href="Codelabs.html">CodeLabs</a></li>
+				<li><a href="Codelabs.html">Codelabs</a></li>
+				<li><a href="Services.html">Services</a></li>
 				<li><a href="projects.html">Projects</a></li>
-				<li><a href="Education.html">Education</a></li>
-				<li><a href="experiments.html">Experiments</a></li>
 			</ul>
 		</nav>
 
@@ -56,12 +55,9 @@
 			<section id="one">
 				<div class="inner">
 					<header class="major">
-						<h2>Welcome</h2>
+						<h2>Our Products & Tools</h2>
 					</header>
-					<p>Welcome to CodeLabsPro</p>
-
-					<p>The ultimate coding bootcamp for codelabs, tutorials and software engineering resources</p>
-
+					<p>CodeLabsPro develops innovative learning tools and educational products designed to make coding accessible and engaging for everyone. Our products support learners at every stage of their coding journey.</p>
 				</div>
 			</section>
 
@@ -74,11 +70,48 @@
 					<div class="content">
 						<div class="inner">
 							<header class="major">
-								<h3>More About CodeLabsPro</h3>
+								<h3>Interactive Learning Platform</h3>
 							</header>
-							<p></p>
-							<p>CodeLabsPro is the ultimate resource for coding bootcamps</p>
-							</p>
+							<p>Our flagship platform provides an immersive, hands-on learning environment where students can write, test, and deploy code in real-time. With built-in guidance and instant feedback, learners can progress at their own pace while building practical skills.</p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<a href="#" class="image">
+						<img src="images/codelabspro_codelab_1.png" alt="" data-position="center center" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>CodeLabs Library</h3>
+							</header>
+							<p>A comprehensive collection of interactive tutorials covering web development, mobile apps, data science, AI, and more. Each codelab is carefully crafted to be beginner-friendly while teaching industry-relevant skills.</p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<a href="#" class="image">
+						<img src="images/pic02.jpg" alt="" data-position="center center" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>Learning Management System</h3>
+							</header>
+							<p>Our LMS helps bootcamps and educational institutions deliver accessible coding education at scale. Track student progress, manage coursework, and provide personalized feedback—all in one platform.</p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<a href="#" class="image">
+						<img src="images/pic03.jpg" alt="" data-position="center center" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>Career Development Tools</h3>
+							</header>
+							<p>Prepare learners for tech careers with our portfolio builder, interview prep resources, and job matching platform. We connect graduates with employers who value diversity and inclusive hiring practices.</p>
 						</div>
 					</div>
 				</section>
@@ -92,9 +125,9 @@
 				<ul class="icons">
 					<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span
 								class="label">GitHub</span></a></li>
-					<li><a target="_blank" href="https://codelabspro.com" class="icon alt fa-linkedin"><span
+					<li><a target="_blank" href="https://codelabspro.medium.com" class="icon alt fa-medium"><span
 								class="label">Medium</span></a></li>
-					<li><a target="_blank" href="https://twitter.com/arun_genomics" class="icon alt fa-twitter"><span
+					<li><a target="_blank" href="https://twitter.com/codelabspro" class="icon alt fa-twitter"><span
 								class="label">Twitter</span></a></li>
 
 				</ul>
