--- a/Services.html
+++ b/Services.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Arun Das</title>
+	<title>CodeLabsPro Services</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 		<!-- Header -->
 		<!-- Note: The "styleN" class below should match that of the banner element. -->
 		<header id="header" class="alt style2">
-			<a href="index.html" class="logo"><strong>AD</strong></a>
+			<a href="index.html" class="logo"><strong>CODELABSPRO</strong></a>
 			<nav>
 				<a href="#menu">Menu</a>
 			</nav>
@@ -30,10 +30,9 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
-				<li><a href="Work.html">Work</a></li>
-				<li><a href="Experience.html">Experience</a></li>
-				<li><a href="Education.html">Education</a></li>
-				<li><a href="Links.html">Recommended Links</a></li>
+				<li><a href="Codelabs.html">Codelabs</a></li>
+				<li><a href="Services.html">Services</a></li>
+				<li><a href="projects.html">Projects</a></li>
 			</ul>
 		</nav>
 		<!-- Banner -->
@@ -44,11 +43,10 @@
 					<img src="images/pic07.jpg" alt="" />
 				</span>
 				<header class="major">
-					<h1>Education</h1>
+					<h1>Our Services</h1>
 				</header>
 				<div class="content">
-					<p>For a copy of my resume, please reach out to me at <b>arun</b> dot <b>das</b> AT <b>jhu.edu</b>.
-					</p>
+					<p>Comprehensive coding education and technical consulting for learners at all levels</p>
 				</div>
 			</div>
 		</section>
@@ -60,51 +58,63 @@
 			<section id="zero">
 				<div class="inner">
 					<header class="major">
-						<h2>Johns Hopkins, Class of 2024</h2>
+						<h2>Coding Bootcamps for Everyone</h2>
 					</header>
-					<p>I am currently a third-year PhD student at Johns Hopkins, studying Computer Science with a focus
-						on Computational Genomics. My advisor is Dr. Mike Schatz.</p>
-					<p><b>Selected Coursework</b>: Sketching and Indexing for Sequences, Applied Comparative Genomics,
-						Data Analysis for Computational Genomics, Deep Learning, Cloud Computing, Human-Computer
-						Interaction, Algorithms.</p>
+					<p>CodeLabsPro offers comprehensive coding bootcamps designed to make programming accessible to learners of all backgrounds. Whether you're a complete beginner or looking to advance your skills, our structured bootcamps provide hands-on learning experiences with real-world applications.</p>
+					<p><b>Our Bootcamp Offerings Include:</b></p>
+					<ul>
+						<li>Full-Stack Web Development Bootcamp</li>
+						<li>Mobile App Development (iOS & Android)</li>
+						<li>Data Science & Machine Learning Fundamentals</li>
+						<li>Frontend Development with Modern Frameworks</li>
+						<li>Backend Engineering & API Development</li>
+					</ul>
 				</div>
 			</section>
 			<section id="one">
 				<div class="inner">
 					<header class="major">
-						<h2>Brown University, Class of 2018</h2>
+						<h2>Interactive Codelabs & Tutorials</h2>
 					</header>
-					<p>I graduated from Brown with a Sc. B in Computer Science and Computational Biology. My advisor was
-						<a target="_blank" href="http://www.brown.edu/Research/Istrail_Lab/sorin.php">Dr. Sorin
-							Istrail</a>, and my senior thesis was on "Approaches in Genomic Privacy".</p>
-					<p><b>Selected Coursework</b>: Computational Molecular Biology, Algorithms in Computational Biology,
-						Algorithms, Genetics, Computational Theory of Molecular Evolution and Population Genetics,
-						Artificial Intelligence, Cryptography and Computer Security, Models of Computation, Data
-						Structures and Algorithms, Database Management Systems, Organic Chemistry, Number Theory.</p>
+					<p>Our codelabs provide step-by-step, hands-on tutorials that guide learners through building real projects. Each codelab is designed with accessibility in mind, breaking down complex concepts into manageable, easy-to-understand modules.</p>
+					<p><b>Features of Our Codelabs:</b></p>
+					<ul>
+						<li>Self-paced learning paths</li>
+						<li>Interactive coding exercises</li>
+						<li>Real-world project examples</li>
+						<li>Video tutorials and written guides</li>
+						<li>Community support and forums</li>
+					</ul>
 				</div>
 			</section>
 			<section id="two">
 				<div class="inner">
 					<header class="major">
-						<h2>Doha College, Class of 2014</h2>
+						<h2>Texperts as a Service - Technical Consulting</h2>
 					</header>
-					<p><b>5 A*s at A-Level</b>: Mathematics, Further Mathematics, Biology, Chemistry and Physics</p>
-					<p><b>10 A*s at GCSE</b>: Mathematics, FSMQ (Free Standing Mathematics Qualification), Biology,
-						Physics, Chemistry, English Language, English Literature, Spanish, History and ICT</p>
+					<p>Get personalized guidance from experienced developers and tech experts through our "Texperts as a Service" offering. We provide technical consulting and office hours to help learners overcome challenges and accelerate their coding journey.</p>
+					<p><b>Our Consulting Services:</b></p>
+					<ul>
+						<li>One-on-one mentorship sessions</li>
+						<li>Code review and feedback</li>
+						<li>Career guidance and interview preparation</li>
+						<li>Project planning and architecture advice</li>
+						<li>Debugging and problem-solving support</li>
+					</ul>
 				</div>
 			</section>
 			<section id="three">
 				<div class="inner">
 					<header class="major">
-						<h2>Other Achievements</h2>
+						<h2>Corporate Training & Team Workshops</h2>
 					</header>
+					<p>CodeLabsPro partners with organizations to provide customized coding training for teams. Our corporate training programs are designed to upskill your workforce and foster a culture of continuous learning.</p>
 					<ul>
-						<li>Duke of Edinburgh Bronze and Silver International awards (2011,2013)</li>
-						<li>EdExcel Academic Award for Excellence (2012).</li>
-						<li>Gold Award in the UK Mathematics Trust Challenge (2014)</li>
-						<li>Captained our school team to Second Place in the 10th annual regional Botball Championships
-							(2014).</li>
-						<li>3rd Place at the Carnegie Mellon University Qatar Ibtikar App-Design contest (2013).</li>
+						<li>Customized curriculum based on your team's needs</li>
+						<li>Flexible scheduling for busy professionals</li>
+						<li>Hands-on workshops and hackathons</li>
+						<li>Progress tracking and assessment tools</li>
+						<li>Post-training support and resources</li>
 					</ul>
 				</div>
 			</section>
@@ -115,16 +125,16 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a target="_blank" href="https://github.com/arun96" class="icon alt fa-github"><span
+					<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span
 								class="label">GitHub</span></a></li>
-					<li><a target="_blank" href="https://www.linkedin.com/in/arun96" class="icon alt fa-linkedin"><span
-								class="label">LinkedIn</span></a></li>
-					<li><a target="_blank" href="https://twitter.com/arun_genomics" class="icon alt fa-twitter"><span
+					<li><a target="_blank" href="https://codelabspro.medium.com" class="icon alt fa-medium"><span
+								class="label">Medium</span></a></li>
+					<li><a target="_blank" href="https://twitter.com/codelabspro" class="icon alt fa-twitter"><span
 								class="label">Twitter</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Arun Das</li>
-					<li>Design by: <a target="_blank" href="https://html5up.net">HTML5 UP</a></li>
+					<li>&copy; CodeLabsPro</li>
+					<li>Design by: <a target="_blank" href="https://codelabspro.com">CodeLabsPro</a></li>
 				</ul>
 			</div>
 		</footer>
