--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 				<li><a href="About.html">About</a></li>
 				<li><a href="Codelabs.html">Codelabs</a></li>
 				<li><a href="Services.html">Services</a></li>
-				<li><a href="projects.html">Products</a></li>
-				<li><a href="Education.html">Projects</a></li>
-				<li><a href="Links.html">Links</a></li>
+				<li><a href="projects.html">Projects</a></li>
 			</ul>
 		</nav>
 
@@ -41,12 +39,12 @@
 		<section id="banner" class="major">
 			<div class="inner">
 				<header class="major">
-					<h1>Welcome to CodeLabsPro</h1>
+					<h1>Making Coding Accessible to Everyone</h1>
 				</header>
 				<div class="content">
-					<p>CodeLabsPro is the ultimate resource for codelabs, tutorials and coding bootcamps</p>
+					<p>Comprehensive coding bootcamps, interactive tutorials, and hands-on codelabs designed for learners at all levels</p>
 					<ul class="actions">
-						<li><a href="#one" class="button next scrolly">Let's Activate AI Innovation</a></li>
+						<li><a href="#one" class="button next scrolly">Start Your Coding Journey</a></li>
 					</ul>
 				</div>
 			</div>
@@ -63,8 +61,7 @@
 					</span>
 					<header class="major">
 						<h3><a href="About.html" class="link">About</a></h3>
-						<p>CodeLabs is a coding bootcamp to ramp up your programming skills and get hired by top tech
-							companies</p>
+						<p>Discover our mission to democratize coding education and make programming accessible to learners from all backgrounds</p>
 					</header>
 				</article>
 				<article>
@@ -73,7 +70,7 @@
 					</span>
 					<header class="major">
 						<h3><a href="Codelabs.html" class="link">Codelabs</a></h3>
-						<p>CodeLabsPro offers CodeLabs and Coding Bootcamps</p>
+						<p>Interactive, step-by-step coding tutorials that make learning programming fun and accessible for everyone</p>
 					</header>
 				</article>
 				<article>
@@ -82,8 +79,7 @@
 					</span>
 					<header class="major">
 						<h3><a href="Services.html" class="link">Services</a></h3>
-						<p>CodeLabsPro offers Texperts as a Service - Technical consulting office hours with tech gurus
-							and tech experts</p>
+						<p>Comprehensive coding bootcamps, technical consulting, and personalized mentorship to accelerate your learning journey</p>
 					</header>
 				</article>
 				<article>
@@ -91,8 +87,8 @@
 						<img src="images/pic03.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="Products.html" class="link">Products</a></h3>
-						<p>CodeLabsPro Products </p>
+						<h3><a href="projects.html" class="link">Projects</a></h3>
+						<p>Build real-world applications through our hands-on project-based learning approach</p>
 					</header>
 				</article>
 				<article>
@@ -100,8 +96,8 @@
 						<img src="images/pic04.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="Projects.html" class="link">Projects</a></h3>
-						<p>CodeLabsPro Projects</p>
+						<h3><a href="About.html" class="link">Community</a></h3>
+						<p>Join a supportive community of learners and developers committed to making coding accessible</p>
 					</header>
 				</article>
 				<article>
@@ -109,8 +105,8 @@
 						<img src="images/code_labs_pro_logo_1.png" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="Links.html" class="link">Links</a></h3>
-						<p>Useful Links and Resources</p>
+						<h3><a href="Codelabs.html" class="link">Resources</a></h3>
+						<p>Free tutorials, guides, and resources to support your coding education journey</p>
 					</header>
 				</article>
 			</section>
@@ -122,9 +118,9 @@
 				<ul class="icons">
 					<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span
 								class="label">GitHub</span></a></li>
-					<li><a target="_blank" href="https://codelabspro.com" class="icon alt fa-linkedin"><span
+					<li><a target="_blank" href="https://codelabspro.medium.com" class="icon alt fa-medium"><span
 								class="label">Medium</span></a></li>
-					<li><a target="_blank" href="https://twitter.com/arun_genomics" class="icon alt fa-twitter"><span
+					<li><a target="_blank" href="https://twitter.com/codelabspro" class="icon alt fa-twitter"><span
 								class="label">Twitter</span></a></li>
 
 				</ul>
