--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Arun Das</title>
+	<title>CodeLabsPro Projects</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 		<!-- Header -->
 		<!-- Note: The "styleN" class below should match that of the banner element. -->
 		<header id="header" class="alt style2">
-			<a href="index.html" class="logo"><strong>AD</strong></a>
+			<a href="index.html" class="logo"><strong>CODELABSPRO</strong></a>
 			<nav>
 				<a href="#menu">Menu</a>
 			</nav>
@@ -30,11 +30,9 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
-				<li><a href="Work.html">Work</a></li>
-				<li><a href="Experience.html">Experience</a></li>
-				<li><a href="Education.html">Education</a></li>
-				<li><a href="Brown.html">My Time at Brown</a></li>
-				<li><a href="Links.html">Recommended Links</a></li>
+				<li><a href="Codelabs.html">Codelabs</a></li>
+				<li><a href="Services.html">Services</a></li>
+				<li><a href="projects.html">Projects</a></li>
 			</ul>
 		</nav>
 
@@ -46,12 +44,10 @@
 					<img src="images/pic07.jpg" alt="" />
 				</span>
 				<header class="major">
-					<h1>Experience</h1>
+					<h1>Our Projects</h1>
 				</header>
 				<div class="content">
-					<p>For a copy of my resume, please reach out to me at <b>arun</b> DOT <b>das</b> AT <b>jhu</b> DOT
-						<b>edu</b>. My Google Scholar page can be found <a target="_blank"
-							href="https://scholar.google.com/citations?user=OxAcXusAAAAJ&hl=en">here</a>.</p>
+					<p>Empowering learners through hands-on coding projects and real-world applications</p>
 				</div>
 			</div>
 		</section>
@@ -60,111 +56,60 @@
 		<div id="main">
 
 			<!-- One -->
-
-			<section id="zero">
-				<div class="inner">
-					<header class="major">
-						<h2>Schatz Lab - Fall 2018 - Present</h2>
-					</header>
-					<p> Working toward my PhD in Computer Science at Johns Hopkins, under the supervision of my advisor,
-						Dr. Mike Schatz. My work focuses on faster ways of solving existing problems in our field - I
-						have worked on developing learned index structures to speed up searching genomic data, and am
-						currently working on sketching and sampling techniques to rapidly classify read data.</p>
-				</div>
-			</section>
-
 			<section id="one">
 				<div class="inner">
 					<header class="major">
-						<h2>Istrail Lab - February 2017 - May 2018</h2>
+						<h2>Building Accessible Learning Experiences</h2>
 					</header>
-					<p> Worked in the lab run by my advisor, <a target="_blank"
-							href="http://www.brown.edu/Research/Istrail_Lab/sorin.php">Dr. Sorin Istrail</a>. I
-						completed a senior undergraduate honors thesis,
-						titled "Approaches in Genomic Privacy". My thesis surveyed the current state of genomic privacy,
-						reviewed
-						potential solutions (both technical and non-technical), and included my projections for the
-						future of
-						the field. It can be found <a target="_blank"
-							href="https://ccmb.brown.edu/sites/g/files/dprerj841/files/ArunDasThesis%20(1).pdf">here
-						</a>. </p>
+					<p>At CodeLabsPro, we believe that coding should be accessible to everyone, regardless of background or experience level. Our projects are designed to provide hands-on learning experiences that empower learners to build real-world applications and develop practical coding skills.</p>
 				</div>
 			</section>
 
 			<section id="two">
 				<div class="inner">
 					<header class="major">
-						<h2>QCRI - Summer 2017</h2>
+						<h2>Web Development Bootcamp Projects</h2>
 					</header>
-					<p> I worked with <a target="_blank"
-							href="http://qcri.org.qa/page?name=Michael_Aupetit&a=117&pid=199&lang=en-CA">Dr. Michael
-							Aupetit</a> on <b>KinVis</b>, a visual analytic tool (built entirely in R and Shiny) for
-						exploring kinship information in Genome Wide Association Studies (GWAS). <a target="_blank"
-							href="https://academic.oup.com/bioinformatics/article/35/15/2683/5258105">The paper can be
-							found on Bioformatics </a>. </p>
+					<p>Our comprehensive web development bootcamp guides learners through building modern, responsive web applications. Students learn HTML, CSS, JavaScript, and popular frameworks like React and Node.js through practical, project-based learning. Each project is designed to be beginner-friendly while building toward professional-level skills.</p>
+					<ul class="actions">
+						<li><a href="Codelabs.html" class="button">Explore Codelabs</a></li>
+					</ul>
 				</div>
 			</section>
 
 			<section id="three">
 				<div class="inner">
 					<header class="major">
-						<h2>QCRI - Summer 2016</h2>
+						<h2>Mobile App Development</h2>
 					</header>
-					<p>Working with <a target="_blank"
-							href="https://www.qcri.org/our-people/bio?pid=193&par=acc&name=MicheleCeccarelli">Dr.
-							Michele Ceccarelli</a> on integrative bioinformatics for Big Data analysis in Cancer
-						Genomics (biomarker discovery and pathway analysis). Integrated multiple existing algorithms
-						(VEGA, VEGA-WES, SAAS-CNV) to create a new method to analyze whole exome sequence (WES) datasets
-						using both the Log R Ratios (LRR) and B Allele Frequencies. Done using R and the relevant
-						packages.</p>
+					<p>Learn to build iOS and Android applications through our mobile development projects. We make mobile app development accessible to beginners while covering essential concepts like UI design, data management, and API integration. Our tutorials break down complex topics into easy-to-follow steps.</p>
 				</div>
 			</section>
 
 			<section id="four">
 				<div class="inner">
 					<header class="major">
-						<h2>QCRI - Summer 2015</h2>
+						<h2>AI & Machine Learning for Everyone</h2>
 					</header>
-					<p>Carried out research into eye-tracking software and hardware with <a target="_blank"
-							href="http://qcri.org.qa/page?name=Jim_Jansen&a=117&pid=235&lang=en-CA">Dr. Jim Jansen</a>.
-						Worked with eye-tracking technology, and conducted research into how visual primers draw
-						attention and affect human behavior and decision making.Responsible for designing and carrying
-						out an experiment to test the effectiveness of various forms of primers using eye-tracking
-						technology.</p>
+					<p>Artificial Intelligence and Machine Learning don't have to be intimidating. Our AI projects introduce learners to these powerful technologies through practical applications and clear explanations. Build your first chatbot, image classifier, or recommendation system with our beginner-friendly tutorials.</p>
 				</div>
 			</section>
 
 			<section id="five">
 				<div class="inner">
 					<header class="major">
-						<h2>Undergraduate Teaching Assistant - CS022 (Spring 2016, Spring 2017, Spring 2018)</h2>
+						<h2>Open Source Contributions</h2>
 					</header>
-					<p>Teaching Assistant for CS022 – Discrete Structures and Probability, taught by <a target="_blank"
-							href="http://www.dam.brown.edu/people/cklivans/">Dr. Caroline Klivans</a>.</p>
+					<p>CodeLabsPro is committed to the open-source community. We provide guidance and resources for learners who want to contribute to open-source projects, making the world of collaborative software development accessible to newcomers. Learn how to read code, submit pull requests, and become part of the global developer community.</p>
 				</div>
 			</section>
 
 			<section id="six">
 				<div class="inner">
 					<header class="major">
-						<h2>Undergraduate Teaching Assistant, CS1010 (Fall 2016, Fall 2017)</h2>
+						<h2>Career-Ready Portfolio Projects</h2>
 					</header>
-					<p>Teaching Assistant for CS101 – Theory of Computation (formerly CS051 – Models of Computation),
-						taught by <a target="_blank" href="https://cs.brown.edu/people/anna/">Dr. Anna Lysyanskaya</a>
-						in Fall 2016, and by <a target="_blank" href="https://cs.brown.edu/people/jes/">Dr. John
-							Savage</a> in Fall 2017.</p>
-				</div>
-			</section>
-
-			<section id="seven">
-				<div class="inner">
-					<header class="major">
-						<h2>Raphael Lab Member - Spring 2016</h2>
-					</header>
-					<p>The Raphael Lab is a research group in the Computer Science Department and Center for
-						Computational Molecular Biology at Brown University that works to develop algorithms and
-						mathematical models to address biological problems. Major areas of interest include
-						computational cancer genomics, human structural variation, and comparative genomics.</p>
+					<p>Our project-based curriculum helps learners build a professional portfolio of work. Each project is designed to showcase practical skills that employers value, from full-stack web applications to data visualization dashboards. We guide learners through the entire development process, from planning to deployment.</p>
 				</div>
 			</section>
 
