--- a/About.html
+++ b/About.html
@@ -29,10 +29,9 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
-				<li><a href="Codelabs.html">CodeLabs</a></li>
+				<li><a href="Codelabs.html">Codelabs</a></li>
+				<li><a href="Services.html">Services</a></li>
 				<li><a href="projects.html">Projects</a></li>
-				<li><a href="Education.html">Education</a></li>
-				<li><a href="experiments.html">Experiments</a></li>
 			</ul>
 		</nav>
 
@@ -56,11 +55,11 @@
 			<section id="one">
 				<div class="inner">
 					<header class="major">
-						<h2>Welcome</h2>
+						<h2>Our Mission</h2>
 					</header>
-					<p>Welcome to CodeLabsPro</p>
+					<p>At CodeLabsPro, we believe that everyone should have the opportunity to learn coding, regardless of their background, experience level, or circumstances. Our mission is to democratize coding education by providing accessible, high-quality learning resources that empower individuals to build meaningful careers in technology.</p>
 
-					<p>The ultimate coding bootcamp for codelabs, tutorials and software engineering resources</p>
+					<p>We're committed to breaking down the barriers that prevent people from entering the tech industry, making coding education inclusive, affordable, and available to all.</p>
 
 				</div>
 			</section>
@@ -74,11 +73,29 @@
 					<div class="content">
 						<div class="inner">
 							<header class="major">
-								<h3>More About CodeLabsPro</h3>
+								<h3>Our Vision</h3>
 							</header>
-							<p></p>
-							<p>CodeLabsPro is the ultimate resource for coding bootcamps</p>
-							</p>
+							<p>We envision a world where coding literacy is universal, where anyone with the desire to learn can access the resources, support, and community they need to succeed. Through our comprehensive bootcamps, interactive codelabs, and supportive learning environment, we're building a more inclusive tech industry—one learner at a time.</p>
+							<p>CodeLabsPro is more than just a coding bootcamp; we're a movement to make technology education accessible to everyone, everywhere.</p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<a href="#" class="image">
+						<img src="images/pic02.jpg" alt="" data-position="center center" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>Our Values</h3>
+							</header>
+							<ul>
+								<li><strong>Accessibility:</strong> We make learning resources available to everyone, with clear explanations and beginner-friendly content</li>
+								<li><strong>Inclusivity:</strong> We welcome learners from all backgrounds and create a supportive environment for everyone</li>
+								<li><strong>Practical Learning:</strong> We focus on hands-on, project-based education that builds real-world skills</li>
+								<li><strong>Community:</strong> We foster a collaborative learning environment where students support each other</li>
+								<li><strong>Continuous Innovation:</strong> We stay current with industry trends to provide relevant, up-to-date education</li>
+							</ul>
 						</div>
 					</div>
 				</section>
@@ -92,9 +109,9 @@
 				<ul class="icons">
 					<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span
 								class="label">GitHub</span></a></li>
-					<li><a target="_blank" href="https://codelabspro.com" class="icon alt fa-linkedin"><span
+					<li><a target="_blank" href="https://codelabspro.medium.com" class="icon alt fa-medium"><span
 								class="label">Medium</span></a></li>
-					<li><a target="_blank" href="https://twitter.com/arun_genomics" class="icon alt fa-twitter"><span
+					<li><a target="_blank" href="https://twitter.com/codelabspro" class="icon alt fa-twitter"><span
 								class="label">Twitter</span></a></li>
 
 				</ul>
